force-app/main/default/objects/Forecast_Month__c/Forecast_Month__c.object-meta.xml
<CustomObject>
    <label>Forecast Month</label>
    <nameField>
        <displayFormat>FM-{0000}</displayFormat>
        <label>Forecast Moth</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Months</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>