force-app/main/default/objects/Forecast_Month__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Forecast_Product__r.Account__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>