force-app/main/default/objects/Forecast_Month__c/fields/Adjustments_Total__c.field-meta.xml
<CustomField>
    <fullName>Adjustments_Total__c</fullName>
    <formula>IF( Forecast_Product__r.Direct_Enabled__c , Adjustments_Total_Direct__c, 0) +  IF( Forecast_Product__r.Local_Enabled__c , Adjustments_Total_Warehouse__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustments Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>