force-app/main/default/objects/Forecast_Month__c/fields/Base_Direct__c.field-meta.xml
<CustomField>
    <fullName>Base_Direct__c</fullName>
    <label>Base: Direct</label>
    <summarizedField>Forecast_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Item__c.Fulfillment__c</field>
        <operation>equals</operation>
        <value>Direct Shipment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.Item_Type__c</field>
        <operation>equals</operation>
        <value>Base</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.External_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Item__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>