force-app/main/default/objects/Forecast_Month__c/fields/Forecast_Product__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Product__c</fullName>
    <label>Forecast Product</label>
    <referenceTo>Forecast_Product__c</referenceTo>
    <relationshipLabel>Forecast Months</relationshipLabel>
    <relationshipName>Forecast_Months</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>