force-app/main/default/objects/Forecast_Month__c/fields/Forecast_Total__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Total__c</fullName>
    <formula>Base_Total__c +  Opportunities_Total__c +  Adjustments_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>