force-app/main/default/objects/Forecast_Month__c/fields/Forecast_Total_Direct__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Total_Direct__c</fullName>
    <formula>Base_Direct__c +  Opportunities_Total_Direct__c +  Adjustments_Total_Direct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Total: Direct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>