force-app/main/default/objects/Forecast_Month__c/fields/Forecast_Total_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Total_Warehouse__c</fullName>
    <formula>Base_Warehouse__c + Opportunities_Total_Warehouse__c + Adjustments_Total_Warehouse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecast Total: Warehouse</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>