force-app/main/default/objects/Forecast_Month__c/fields/Forecasting_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Forecasting_Enabled__c</fullName>
    <formula>Forecast_Product__r.Forecasting_Enabled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasting Enabled</label>
    <type>Checkbox</type>
</CustomField>