force-app/main/default/objects/Forecast_Month__c/fields/Opportunities_Total__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Total__c</fullName>
    <formula>IF( Forecast_Product__r.Direct_Enabled__c , Opportunities_Total_Direct__c, 0) + IF( Forecast_Product__r.Local_Enabled__c , Opportunities_Total_Warehouse__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>