force-app/main/default/objects/Forecast_Month__c/fields/Opportunities_Total_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Total_Warehouse__c</fullName>
    <label>Opportunities Total: Warehouse</label>
    <summarizedField>Forecast_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Item__c.Item_Type__c</field>
        <operation>equals</operation>
        <value>Opportunity Product</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.Fulfillment__c</field>
        <operation>equals</operation>
        <value>Local Warehouse</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.BU_Approval__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.External_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Item__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>