force-app/main/default/objects/Forecast_Month__c/fields/Previous_Year_Orders__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Orders__c</fullName>
    <label>Previous Year Orders</label>
    <summarizedField>Forecast_Item__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Forecast_Item__c.Item_Type__c</field>
        <operation>equals</operation>
        <value>Previous Year Order</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Forecast_Item__c.External_Id__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Forecast_Item__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>