force-app/main/default/objects/Forecast_Month__c/fields/SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Code__c</fullName>
    <formula>Forecast_Product__r.Account__r.SAP_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Code</label>
    <type>Text</type>
</CustomField>