force-app/main/default/objects/Forecast_Month__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Month__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>External_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>